Payment ui fixes

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <br>
 
             <label for="Payment Method"><pre>Payment Method</pre></label>
-            <input type="text" style="margin-left: 0px; width:186px;" id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
+            <input type="text" style="margin-left: 0px; " id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
             <br>
 
             <label for="expiryMonth">Expiry</label>
