--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="cartHeader">
         <h1 style="text-align:center;font-size:60px;">Your Order</h1>
     </div>
-    <div class="cart1" style="  background-color: rgb(25, 25, 25);">
+    <div class="cart1"  style="  background-color: rgb(25, 25, 25);">
         <h1 style="text-align: center; font-size:50px;">Order Summary</h1>
             <div class = "CartScroller">
                 <ul id="CartList">
@@ -137,7 +137,7 @@
             <br>
             <br>
 
-            <label for="Payment Method"><pre>Payment Method</pre></label>
+            <label for="Payment Method">Payment Method</br></label>
             <input type="text" style="margin-left: 0px; " id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
             <br>
 
