--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         <div id="contact" class="modal">
             <div class="modal-content animate" style ="color: rgb(187,134,252);">
                 <h1 style="text-align:center">Welcome to FoodGram!</h1>
-                <p>This is our high-fidelity vertical prototype. Formed as a part of our HCI project.</p><br>
+                <p>This is a high-fidelity vertical prototype.</p>
+                <p>FoodGram is here to help you find freshest food in town through User Reviews.</p>
+                <p>Click a review to either see the reviewed restaurant, or the exact meal someone ordered.</p>
+                <p>FoodGram automatically adds your social media friends from other platforms, so remember to leave a review so your friends can find the food you love!</p><br>
                 <pre style="font-size: 16px; font-weight: bold; font-size: large;">
 	  Developed by:
         Aniket Mall 							        malla@myumanitoba.ca
@@ -91,7 +94,7 @@
 
         <div class="footer">
             <!-- <button class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button> -->
-            <button type = "button" class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button>
+            <button type = "button" class = "headerButton" id="contactUsButton" onclick="document.getElementById('contact').style.display='block';" >Help Me</button>
         </div>
         <script>
             if ( window.history.replaceState ) {
