--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <label for="pass"><b>Password:</b></label><br>
                 <input class = "login" type="password" id="pass" name="pass" placeholder="Enter Password" required><br>
 
-                <button class = "headerButton" onclick= "loginAction();">Log In</button>
+                <button class = "headerButton">Log In</button>
                 <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
             </ul>
         </div>
@@ -234,7 +234,7 @@
                 <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
 
-                <button type = "button" class = "headerButton" onclick= "signUpAction();">Sign Up</button>
+                <button class = "headerButton" >Sign Up</button>
                 <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
             </ul>
         </div>
