remove double bracket

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <input class = "login" type="text" id="fnameS" name="fnameS" placeholder="Your First Name" autofocus required><br>
 
                 <label for="lnameS"><b>Last Name:</b></label><br>
-                <input class = "login" type="text" id="lnameS" name="lnameS" placeholder="Your Last Name" required><br>>
+                <input class = "login" type="text" id="lnameS" name="lnameS" placeholder="Your Last Name" required><br>
             
                 <label for="email"><b>Email:</b></label><br>
                 <input class = "login" type="email" id="email" name="email" placeholder="YourEmail@Example.com" required><br>
