--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
                 <label for="pass"><b>Password:</b></label><br>
                 <input class = "login" type="password" id="pass" name="pass" placeholder="Enter Password" required><br>
 
-                <button class = "headerButton" onsubmit="loginAction();">Log In</button>
                 <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
+                <button class = "headerButton" onsubmit="loginAction();">Log In</button>
+
             </ul>
         </div>
     </form>
@@ -215,6 +216,7 @@
             <h1 style="text-align:center">Welcome to FoodGram!</h1>
 
             <ul style="margin-left: 35%">
+
                 <label for="fnameS"><b>First Name:</b></label><br>
                 <input class = "login" type="text" id="fnameS" name="fnameS" placeholder="Your First Name" autofocus required><br>
 
@@ -233,9 +235,9 @@
                 <label for="confpass"><b>Confirm Password:</b></label><br>
                 <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
-
-                <button class = "headerButton" onsubmit="loginAction();">Sign Up</button>
                 <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
+                <button class = "headerButton" onsubmit="signUpAction();">Sign Up</button>
+
             </ul>
         </div>
     </form>
