--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- This will be the main page of our website-->
+<!-- This will be the main page of our -->
 
 <!DOCTYPE html>
 <html lang="en-ca">
@@ -168,7 +168,7 @@
 
             <div class = "footerCart" class="cart2">
                 <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-                <button  class = "acceptButton">Process Payment</button>
+                <button  class = "acceptButton" onclick="document.getElementById('cart').style.display='none';document.getElementById('thankYou').style.display='block';">Process Payment</button>
 
             </div>
 
@@ -279,6 +279,14 @@
         <button id="AddAReview" class = "headerButton3"  onclick = "addReviewThing();" style="margin-top:10%;">Add Review</button>
         <button id="CancelReview" class = "headerButton3"  style="margin-top:10%;background-color:red;">Cancel</button>
 
+    </div>
+</div>
+
+<div id="thankYou" class="modal5">
+    <div class="modal-content3">
+        <img src="DeliveryGuy.png" style="width:50%;height:90%;margin-left:auto; margin-right:auto; display:block; position:relative; top:-65px;"> 
+        <h3 style="text-align:center;display:block; position:relative; margin-top:auto; margin-bottom:auto; top:-90px;">Thank you! <br> Your order will be delivered soon <br> You will be sent an email to leave a review</h3>
+        <button class="headerButton3" style="margin-top:10%;background-color:red;display:block; margin-left:auto; margin-right:auto; margin-bottom:auto; margin-top:auto; position:relative; top:-85px;" onclick="document.getElementById('thankYou').style.display='none';">Close</button>
     </div>
 </div>
 
