--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="modal-content animate" style ="color: rgb(187,134,252);">
                 <h1 style="text-align:center">Welcome to FoodGram!</h1>
                 <p>This is a high-fidelity vertical prototype.</p>
-                <p>FoodGram is here to help you find freshest food in town through User Reviews.</p>
+                <p>FoodGram is here to help you find the tastiest food in town through User Reviews.</p>
                 <p>Click a review to either see the reviewed restaurant, or the exact meal someone ordered.</p>
                 <p>FoodGram automatically adds your social media friends from other platforms, so remember to leave a review so your friends can find the food you love!</p><br>
                 <pre style="font-size: 16px; font-weight: bold; font-size: large;">
