--- a/index.html
+++ b/index.html
@@ -123,54 +123,54 @@
         <h1>Checkout</h1>
 
          <form method="post" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
+            <div style="overflow-y:scroll;height:400px;">
+                <label for="Delivery Address">Delivery Address<br></label>
+                <input type="text" id="fname" name="fname" placeholder="First Name" required>
+                <input type="text" id="lname" name="lname" placeholder="Last Name" required>
+                <br>
+                <input type="text" id="address" name="address" placeholder="Street Address" required>
+                <input type="text" id="postal" name="postal" placeholder="Postal Code" required>
+                <br>
+                <br>
+                <label for="Billing Address">Billing Address<br></label>
+                <input type="text" id="fname" name="fname" placeholder="First Name" required>
+                <input type="text" id="lname" name="lname" placeholder="Last Name" required>
+                <br>
+                <input type="text" id="address" name="address" placeholder="Street Address" required>
+                <input type="text" id="postal" name="postal" placeholder="Postal Code" required>
+                <br>
+                <br>
 
-            <label for="Delivery Address">Delivery Address<br></label>
-            <input type="text" id="fname" name="fname" placeholder="First Name" required>
-            <input type="text" id="lname" name="lname" placeholder="Last Name" required>
-            <br>
-            <input type="text" id="address" name="address" placeholder="Street Address" required>
-            <input type="text" id="postal" name="postal" placeholder="Postal Code" required>
-            <br>
-            <br>
-            <label for="Billing Address">Billing Address<br></label>
-            <input type="text" id="fname" name="fname" placeholder="First Name" required>
-            <input type="text" id="lname" name="lname" placeholder="Last Name" required>
-            <br>
-            <input type="text" id="address" name="address" placeholder="Street Address" required>
-            <input type="text" id="postal" name="postal" placeholder="Postal Code" required>
-            <br>
-            <br>
+                <label for="Payment Method">Payment Method</br></label>
+                <input type="text" style="margin-left: 0px; " id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
+                <br>
 
-            <label for="Payment Method">Payment Method</br></label>
-            <input type="text" style="margin-left: 0px; " id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
-            <br>
+                <label for="expiryMonth">Expiry</label>
+                <select name="expiryMonth" id="expiryMonth">
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
 
-            <label for="expiryMonth">Expiry</label>
-            <select name="expiryMonth" id="expiryMonth">
-                <option value="01">01</option>
-                <option value="02">02</option>
-                <option value="03">03</option>
-                <option value="04">04</option>
-                <option value="05">05</option>
-                <option value="06">06</option>
-                <option value="07">07</option>
-                <option value="08">08</option>
-                <option value="09">09</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-            </select>
-
-            <label for="expiryYear"></label>
-            <select name="expiryYear" id="expiryYear">
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-            </select>
-            <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
-
+                <label for="expiryYear"></label>
+                <select name="expiryYear" id="expiryYear">
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                </select>
+                <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
+            </div>
             <div class = "footerCart" class="cart2">
                 <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
                 <button  class = "acceptButton" onsubmit="document.getElementById('cart').style.display='none';document.getElementById('thankYou').style.display='block';">Process Payment</button>
