--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
 
     <div class="cart2" style="background-color: rgb(25, 25, 25);" >
         <h1>Checkout</h1>
-
-         <form method="post" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
-            <div style="overflow-y:scroll;height:435px;">
+        <div class = "CartScroller2">
+         <form method="post" class = "CartForm" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
                 <label for="Delivery Address">Delivery Address<br></label>
                 <input type="text" id="fname" name="fname" placeholder="First Name" required>
                 <input type="text" id="lname" name="lname" placeholder="Last Name" required>
@@ -168,14 +167,11 @@
                     <option value="24">24</option>
                 </select>
                 <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
-            </div>
-            <div class = "footerCart" class="cart2">
                 <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
                 <button  class = "acceptButton" onsubmit="document.getElementById('cart').style.display='none';document.getElementById('thankYou').style.display='block';">Process Payment</button>
 
-            </div>
-
          </form>
+    </div>
 
     </div>
 
