--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="cart2" style="background-color: rgb(25, 25, 25);" >
         <h1>Checkout</h1>
         <div class = "CartScroller2">
-         <form method="post" class = "CartForm" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
+         <form method="post" class = "CartForm" onsubmit="submitForm(); let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
                 <label for="Delivery Address">Delivery Address<br></label>
                 <input type="text" id="fname" name="fname" placeholder="First Name" required>
                 <input type="text" id="lname" name="lname" placeholder="Last Name" required>
@@ -168,7 +168,7 @@
                 </select>
                 <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
                 <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-                <button  class = "acceptButton" onsubmit="document.getElementById('cart').style.display='none';document.getElementById('thankYou').style.display='block';">Process Payment</button>
+                <button  class = "acceptButton" id="processPayment">Process Payment</button>
 
          </form>
     </div>
