--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
     <div class="bottomHeader"> <!-- Bottom header for category buttons -->
         <ul class = "topNavBar">
-            <li><a href = "index.html"> <img src = "stars/oldStars/1star.png" style="width:20; height:20px;"> All </a></li>
-            <li><a href = "index.html?search=Pizza"> <img src = "navBarIcons/pizza.png" style="width:20px; height:20px;"> Pizza </a></li>
-            <li><a href = "index.html?search=Burger"><img src = "navBarIcons/burger.png" style="width:20px; height:20px;"> Burgers </a></li>
-            <li><a href = "index.html?search=Steak"><img src = "navBarIcons/roast.png" style="width:30px; height:20px;"> Fine Dinning </a></li>
-            <li><a href = "index.html?search=Chocolate"><img src = "navBarIcons/cupcake.png" style="width:20px; height:20px;"> Desserts </a></li>
-            <li><a href = "index.html?search=Coffee"><img src = "navBarIcons/coffee.png" style="width:20px; height:20px;"> Drinks </a></li>
+            <li><a href = "index.html"> <img src = "stars/oldStars/1star.png" style="width:30px; height:30px;"> All </a></li>
+            <li><a href = "index.html?search=Pizza"> <img src = "navBarIcons/pizza.png" style="width:30px; height:30px;"> Pizza </a></li>
+            <li><a href = "index.html?search=Burger"><img src = "navBarIcons/burger.png" style="width:30px; height:30px;"> Burgers </a></li>
+            <li><a href = "index.html?search=Steak"><img src = "navBarIcons/roast.png" style="width:40px; height:30px;"> Fine Dinning </a></li>
+            <li><a href = "index.html?search=Chocolate"><img src = "navBarIcons/cupcake.png" style="width:30px; height:30px;"> Desserts </a></li>
+            <li><a href = "index.html?search=Coffee"><img src = "navBarIcons/coffee.png" style="width:30px; height:30px;"> Drinks </a></li>
         </ul>
     </div>
 
