changed cvv to password type

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <option value="23">23</option>
                     <option value="24">24</option>
                 </select>
-                <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
+                <input type="password" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
                 <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
                 <button  class = "acceptButton" id="processPayment">Process Payment</button>
 
