--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span id = "loginButton"><button class = "headerButton left" onclick="document.getElementById('login').style.display='inline'"> Log In </button></span>
         <button id = "usernameButton" class = "usernameButton left" style="display: none"> </button>
         <img id = "logo" src="logo1.png">
-        <button class = "headerButton right" id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart
+        <button class = "headerButton right" id = "checkoutButton"> <i style = "font-size:1.2vw;" class="material-icons">add_shopping_cart</i>
         </button>
         <form>
             <input id = "searchBar" type="text" name="search">
