--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
     <div class="footer">
         <div id="contact" class="modal">
-            <div class="modal-content animate" style ="color: rgb(187,134,252);">
-                <h1 style="text-align:center">Welcome to FoodGram!</h1>
-                <p>This is a high-fidelity vertical prototype.</p>
-                <p>FoodGram is here to help you find the tastiest food in town through User Reviews.</p>
-                <p>Click a review to either see the reviewed restaurant, or the exact meal someone ordered.</p>
-                <p>FoodGram automatically adds your social media friends from other platforms, so remember to leave a review so your friends can find the food you love!</p><br>
-                <pre style="font-size: 16px; font-weight: bold; font-size: large;">
+            <div class="modal-content animate" style ="color: rgb(187,134,252); font-size:1vw;">
+                <h1 style="text-align:center; font-size:2.5vw;">Welcome to FoodGram!</h1>
+                <p style="font-size:1vw;">This is a high-fidelity vertical prototype.</p>
+                <p style="font-size:1vw;">FoodGram is here to help you find the tastiest food in town through User Reviews.</p>
+                <p style="font-size:1vw;">Click a review to either see the reviewed restaurant, or the exact meal someone ordered.</p>
+                <p style="font-size:1vw;">FoodGram automatically adds your social media friends from other platforms, so remember to leave a review so your friends can find the food you love!</p><br>
+                <pre style="font-size:1vw; font-weight: bold;">
 	  Developed by:
         Aniket Mall 							        malla@myumanitoba.ca
 	  Christopher Vattheuer	 						vattheuc@myumanitoba.ca
@@ -289,9 +289,9 @@
 
 <div id="thankYou" class="modal5">
     <div class="modal-content3">
-        <img src="DeliveryGuy.png" style="width:50%;height:90%;margin-left:auto; margin-right:auto; display:block; position:relative; top:-65px;"> 
-        <h3 style="text-align:center;display:block; position:relative; margin-top:auto; margin-bottom:auto; top:-90px;">Thank you! <br> Your order will be delivered soon <br> You will be sent an email to leave a review</h3>
-        <button class="headerButton3" style="margin-top:10%;background-color:red;display:block; margin-left:auto; margin-right:auto; margin-bottom:auto; margin-top:auto; position:relative; top:-85px;" onclick="document.getElementById('thankYou').style.display='none';window.localStorage.setItem('cartContents', JSON.stringify([]));">Close</button>
+        <img src="DeliveryGuy.png" style="width:15vw;height:25vh;margin-left:auto; margin-right:auto; display:block; position:relative; ">
+        <h3 style="text-align:center;display:block; position:relative; font-size:1vw; margin-top:auto; margin-bottom:auto; top:-3.5vh;">Thank you! <br> Your order will be delivered soon <br> You will be sent an email to leave a review</h3>
+        <button class="headerButton3" style="margin-top:5vh;background-color:red;display:block; margin-left:auto; margin-right:auto; margin-bottom:auto; margin-top:auto; position:relative; top:-3vh;" onclick="document.getElementById('thankYou').style.display='none';window.localStorage.setItem('cartContents', JSON.stringify([]));">Close</button>
     </div>
 </div>
 
