--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <h1 id="FoodName">Food Item!</h1>
         </div>
         <h2 id="FoodDesc">Here is the description</h2>
-        <div id="IngredientList"></div>
+        <div style="height:18vh;"   id="IngredientList"></div>
         <button id="AddToCart" class = "headerButton3" onclick = "addToCart();">Add To Cart</button>
 
         <button id="AddReview" class = "headerButton4"  onclick = "document.getElementById('reviewPopup').style.display='block'">Add To Reviews</button>
